<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.chotuve_android_client.models.UsersInformationListInner" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="35dp">

        <TextView
            android:id="@+id/video_title"
            android:layout_width="364dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/friendship_request"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.298" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="361dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:text="@{user.email}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_accept_request"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:drawableLeft="@drawable/ic_account_circle_24px"
                android:text="@string/accept_button"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.209" />


            <Button
                android:id="@+id/button_reject_request"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginLeft="100dp"
                android:drawableLeft="@drawable/ic_clear_24px"
                android:text="@string/reject_button"
                app:iconTint="@color/light_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.209" />

        </LinearLayout>

    </LinearLayout>


    </layout>